--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -194,5 +194,97 @@
     "/js/app.4681c8a1ce6ff049997f.hot-update.js": "/js/app.4681c8a1ce6ff049997f.hot-update.js",
     "/js/app.05c6c2702ac46e2aec95.hot-update.js": "/js/app.05c6c2702ac46e2aec95.hot-update.js",
     "/js/app.a5c382083a2916f9b252.hot-update.js": "/js/app.a5c382083a2916f9b252.hot-update.js",
-    "/js/app.4441fbf8e207ed50ddd4.hot-update.js": "/js/app.4441fbf8e207ed50ddd4.hot-update.js"
+    "/js/app.4441fbf8e207ed50ddd4.hot-update.js": "/js/app.4441fbf8e207ed50ddd4.hot-update.js",
+    "/js/app.7e18fef206cf9629b7b7.hot-update.js": "/js/app.7e18fef206cf9629b7b7.hot-update.js",
+    "/js/app.adefff0c6f99ba5cf16d.hot-update.js": "/js/app.adefff0c6f99ba5cf16d.hot-update.js",
+    "/js/app.5870ddd2defd622c3179.hot-update.js": "/js/app.5870ddd2defd622c3179.hot-update.js",
+    "/js/app.a9dece2d2e8ae5f2a170.hot-update.js": "/js/app.a9dece2d2e8ae5f2a170.hot-update.js",
+    "/js/app.588e50a923834bcee7ce.hot-update.js": "/js/app.588e50a923834bcee7ce.hot-update.js",
+    "/js/app.82164ae0d1db821fb440.hot-update.js": "/js/app.82164ae0d1db821fb440.hot-update.js",
+    "/js/app.1d9b17a54eb93ba5a779.hot-update.js": "/js/app.1d9b17a54eb93ba5a779.hot-update.js",
+    "/js/app.a0fbfe18f1c9e9bdae6c.hot-update.js": "/js/app.a0fbfe18f1c9e9bdae6c.hot-update.js",
+    "/js/app.dcec245a208bb8f2b409.hot-update.js": "/js/app.dcec245a208bb8f2b409.hot-update.js",
+    "/js/app.0257129196770294874d.hot-update.js": "/js/app.0257129196770294874d.hot-update.js",
+    "/js/app.5a25652839b6d3dcaa73.hot-update.js": "/js/app.5a25652839b6d3dcaa73.hot-update.js",
+    "/js/app.38d3a0b5371ad50831bc.hot-update.js": "/js/app.38d3a0b5371ad50831bc.hot-update.js",
+    "/js/app.d83d19d954897440bb5d.hot-update.js": "/js/app.d83d19d954897440bb5d.hot-update.js",
+    "/js/app.37e4149aeeeef8d7131a.hot-update.js": "/js/app.37e4149aeeeef8d7131a.hot-update.js",
+    "/js/app.64c3b474cbec4aaf142f.hot-update.js": "/js/app.64c3b474cbec4aaf142f.hot-update.js",
+    "/js/app.fbd077884ebbc95e4663.hot-update.js": "/js/app.fbd077884ebbc95e4663.hot-update.js",
+    "/js/app.94fa8ea1062e87a99366.hot-update.js": "/js/app.94fa8ea1062e87a99366.hot-update.js",
+    "/js/app.22aa2c196b27f34d7417.hot-update.js": "/js/app.22aa2c196b27f34d7417.hot-update.js",
+    "/js/app.75609b9bbe0cab208f97.hot-update.js": "/js/app.75609b9bbe0cab208f97.hot-update.js",
+    "/js/app.272252f30e38298b4e52.hot-update.js": "/js/app.272252f30e38298b4e52.hot-update.js",
+    "/js/app.41fa3827b07778c61597.hot-update.js": "/js/app.41fa3827b07778c61597.hot-update.js",
+    "/js/app.bb530ddfd1c34b365859.hot-update.js": "/js/app.bb530ddfd1c34b365859.hot-update.js",
+    "/js/app.488a9ef152ba2a8c5c8b.hot-update.js": "/js/app.488a9ef152ba2a8c5c8b.hot-update.js",
+    "/js/app.6348305d01c5b9996400.hot-update.js": "/js/app.6348305d01c5b9996400.hot-update.js",
+    "/js/app.8d0299188b47b174a11c.hot-update.js": "/js/app.8d0299188b47b174a11c.hot-update.js",
+    "/js/app.e6dcc66dc1b1228c115d.hot-update.js": "/js/app.e6dcc66dc1b1228c115d.hot-update.js",
+    "/js/app.fe4c62214eb96d6069bd.hot-update.js": "/js/app.fe4c62214eb96d6069bd.hot-update.js",
+    "/js/app.6f1cd5103327a49edfcc.hot-update.js": "/js/app.6f1cd5103327a49edfcc.hot-update.js",
+    "/js/app.53461908117269f372da.hot-update.js": "/js/app.53461908117269f372da.hot-update.js",
+    "/js/app.c2aafe8064d31b28800f.hot-update.js": "/js/app.c2aafe8064d31b28800f.hot-update.js",
+    "/js/app.26ac5626627ce59daf26.hot-update.js": "/js/app.26ac5626627ce59daf26.hot-update.js",
+    "/js/app.9ee65ee3fc20a2269e2f.hot-update.js": "/js/app.9ee65ee3fc20a2269e2f.hot-update.js",
+    "/js/app.d92af4e7916772242823.hot-update.js": "/js/app.d92af4e7916772242823.hot-update.js",
+    "/js/app.e1699bfd4e92fff0b0ba.hot-update.js": "/js/app.e1699bfd4e92fff0b0ba.hot-update.js",
+    "/js/app.ff2c0dd4121639a1e141.hot-update.js": "/js/app.ff2c0dd4121639a1e141.hot-update.js",
+    "/js/app.bea8c1af3455dbb81171.hot-update.js": "/js/app.bea8c1af3455dbb81171.hot-update.js",
+    "/js/app.d8b9bdc0ac6517a96216.hot-update.js": "/js/app.d8b9bdc0ac6517a96216.hot-update.js",
+    "/js/app.96d9e460fca6070dd5a2.hot-update.js": "/js/app.96d9e460fca6070dd5a2.hot-update.js",
+    "/js/app.77ff3f422c74fef2cb6c.hot-update.js": "/js/app.77ff3f422c74fef2cb6c.hot-update.js",
+    "/js/app.c2756c8a454a7514ce63.hot-update.js": "/js/app.c2756c8a454a7514ce63.hot-update.js",
+    "/js/app.1368733134cc749ce02d.hot-update.js": "/js/app.1368733134cc749ce02d.hot-update.js",
+    "/js/app.32639e200074d3a7853f.hot-update.js": "/js/app.32639e200074d3a7853f.hot-update.js",
+    "/js/app.f3c6ad48d39d41285ff1.hot-update.js": "/js/app.f3c6ad48d39d41285ff1.hot-update.js",
+    "/js/app.b48d31e13d2e416006ae.hot-update.js": "/js/app.b48d31e13d2e416006ae.hot-update.js",
+    "/js/app.33e73516571c41254c4d.hot-update.js": "/js/app.33e73516571c41254c4d.hot-update.js",
+    "/js/app.562b5284e0c4539e26c4.hot-update.js": "/js/app.562b5284e0c4539e26c4.hot-update.js",
+    "/js/app.35748a03899d3b600156.hot-update.js": "/js/app.35748a03899d3b600156.hot-update.js",
+    "/js/app.33c62e0c9ee6f2c9fe3a.hot-update.js": "/js/app.33c62e0c9ee6f2c9fe3a.hot-update.js",
+    "/js/app.495cc1e0e481e6081071.hot-update.js": "/js/app.495cc1e0e481e6081071.hot-update.js",
+    "/js/app.ee3ddb0e9c667e5b46ff.hot-update.js": "/js/app.ee3ddb0e9c667e5b46ff.hot-update.js",
+    "/js/app.56a011a2e49961a30676.hot-update.js": "/js/app.56a011a2e49961a30676.hot-update.js",
+    "/js/app.743a056646ee91cb06c5.hot-update.js": "/js/app.743a056646ee91cb06c5.hot-update.js",
+    "/js/app.be5b5319a333f625698b.hot-update.js": "/js/app.be5b5319a333f625698b.hot-update.js",
+    "/js/app.2b0b98f1ddecd1d4262b.hot-update.js": "/js/app.2b0b98f1ddecd1d4262b.hot-update.js",
+    "/js/app.4271688fb565a69a7459.hot-update.js": "/js/app.4271688fb565a69a7459.hot-update.js",
+    "/js/app.a35f4df2ba7ddb28425b.hot-update.js": "/js/app.a35f4df2ba7ddb28425b.hot-update.js",
+    "/js/app.fe257c902cb37f7145d0.hot-update.js": "/js/app.fe257c902cb37f7145d0.hot-update.js",
+    "/js/app.2cb69edd53716cfb0239.hot-update.js": "/js/app.2cb69edd53716cfb0239.hot-update.js",
+    "/js/app.ff0145cc73302ecfc7a6.hot-update.js": "/js/app.ff0145cc73302ecfc7a6.hot-update.js",
+    "/js/app.01b9b3400aa82467f7e0.hot-update.js": "/js/app.01b9b3400aa82467f7e0.hot-update.js",
+    "/js/app.3f7ea9c952ec0c875a5f.hot-update.js": "/js/app.3f7ea9c952ec0c875a5f.hot-update.js",
+    "/js/app.ae9d8fc49bc2c4bf5f4a.hot-update.js": "/js/app.ae9d8fc49bc2c4bf5f4a.hot-update.js",
+    "/js/app.95e10ad2079c2aa164bf.hot-update.js": "/js/app.95e10ad2079c2aa164bf.hot-update.js",
+    "/js/app.a2eb920309fa46f47178.hot-update.js": "/js/app.a2eb920309fa46f47178.hot-update.js",
+    "/js/app.27a875acd3f44a3c5284.hot-update.js": "/js/app.27a875acd3f44a3c5284.hot-update.js",
+    "/js/app.ff404c4fc10778fc204a.hot-update.js": "/js/app.ff404c4fc10778fc204a.hot-update.js",
+    "/js/app.3b0a05b95a904b6f2cff.hot-update.js": "/js/app.3b0a05b95a904b6f2cff.hot-update.js",
+    "/js/app.63a3cfd2abfaa9edfce9.hot-update.js": "/js/app.63a3cfd2abfaa9edfce9.hot-update.js",
+    "/js/app.04ce3c1800536a375026.hot-update.js": "/js/app.04ce3c1800536a375026.hot-update.js",
+    "/js/app.6caf336bbd41fe777ff3.hot-update.js": "/js/app.6caf336bbd41fe777ff3.hot-update.js",
+    "/js/app.5d6dc2f221d34eba8335.hot-update.js": "/js/app.5d6dc2f221d34eba8335.hot-update.js",
+    "/js/app.68b859d1a855c5f7672f.hot-update.js": "/js/app.68b859d1a855c5f7672f.hot-update.js",
+    "/js/app.1dd0a470788fb18a087b.hot-update.js": "/js/app.1dd0a470788fb18a087b.hot-update.js",
+    "/js/app.e2ca09e753455b1ac79d.hot-update.js": "/js/app.e2ca09e753455b1ac79d.hot-update.js",
+    "/js/app.2c1cb8fba9f54c8a2a70.hot-update.js": "/js/app.2c1cb8fba9f54c8a2a70.hot-update.js",
+    "/js/app.4e01cfa503b22f990cf0.hot-update.js": "/js/app.4e01cfa503b22f990cf0.hot-update.js",
+    "/js/app.cc8c66e8725ee015d826.hot-update.js": "/js/app.cc8c66e8725ee015d826.hot-update.js",
+    "/js/app.a3dcce10566085616154.hot-update.js": "/js/app.a3dcce10566085616154.hot-update.js",
+    "/js/app.6e15ee8b11f0cd7cafda.hot-update.js": "/js/app.6e15ee8b11f0cd7cafda.hot-update.js",
+    "/js/app.0416375d9640bf7fe45e.hot-update.js": "/js/app.0416375d9640bf7fe45e.hot-update.js",
+    "/js/app.f60c5db8b812d8a57598.hot-update.js": "/js/app.f60c5db8b812d8a57598.hot-update.js",
+    "/js/app.a3faf14ead376027f8b7.hot-update.js": "/js/app.a3faf14ead376027f8b7.hot-update.js",
+    "/js/app.5527183dc64e82e9b27b.hot-update.js": "/js/app.5527183dc64e82e9b27b.hot-update.js",
+    "/js/app.74e6cfe6b54e676fa262.hot-update.js": "/js/app.74e6cfe6b54e676fa262.hot-update.js",
+    "/js/app.b84359a6a0eef11e241b.hot-update.js": "/js/app.b84359a6a0eef11e241b.hot-update.js",
+    "/js/app.eea44600e9748d08c98e.hot-update.js": "/js/app.eea44600e9748d08c98e.hot-update.js",
+    "/js/app.8d6138e28518321e40e2.hot-update.js": "/js/app.8d6138e28518321e40e2.hot-update.js",
+    "/js/app.45671a5bddfaa64fa9ec.hot-update.js": "/js/app.45671a5bddfaa64fa9ec.hot-update.js",
+    "/js/app.5eb60d75eb89d326deb5.hot-update.js": "/js/app.5eb60d75eb89d326deb5.hot-update.js",
+    "/js/app.c45722dbb8f36e82fea8.hot-update.js": "/js/app.c45722dbb8f36e82fea8.hot-update.js",
+    "/js/app.f553d92cb86dc6874b19.hot-update.js": "/js/app.f553d92cb86dc6874b19.hot-update.js",
+    "/js/app.185db2c47c0e8e5dcb44.hot-update.js": "/js/app.185db2c47c0e8e5dcb44.hot-update.js"
 }
